syntax = "proto3";

package wasm.service;

// Generic RPC service
service WasmService {
  // Unary RPC
  rpc Call(Request) returns (Response);
  
  // Server streaming
  rpc ServerStream(Request) returns (stream Response);
  
  // Client streaming
  rpc ClientStream(stream Request) returns (Response);
  
  // Bidirectional streaming
  rpc BidirectionalStream(stream Request) returns (stream Response);
}

message Request {
  string method = 1;
  bytes payload = 2;
  map<string, string> metadata = 3;
}

message Response {
  uint32 code = 1;
  bytes payload = 2;
  map<string, string> metadata = 3;
  optional Error error = 4;
}

message Error {
  string message = 1;
  string code = 2;
  optional bytes details = 3;
}